copied more chapters from the paper

--- a/newcommands.tex
+++ b/newcommands.tex
@@ -19,13 +19,20 @@
 \newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
 \newcommand{\xmloptions}{\texttt{options.xml}\xspace}
+\newcommand{\xmlcsg}{\texttt{map.xml}\xspace}
 \newcommand{\xmlsegments}{\texttt{segments.xml}\xspace}
 \newcommand{\sqlstate}{\texttt{state.db}\xspace}
+\newcommand{\topology}{\texttt{topol.tpr}\xspace}
+\newcommand{\trajectory}{\texttt{traj.xtc}\xspace}
 
 \newcommand{\opt}{\texttt{{ -}-opt}\xspace}
 \newcommand{\seg}{\texttt{{ -}-s}\xspace}
 \newcommand{\sql}{\texttt{{ -}-db}\xspace}
 \newcommand{\exe}{\texttt{{ -}-exec}\xspace}
+\newcommand{\tpl}{\texttt{{ -}-top}\xspace}
+\newcommand{\csg}{\texttt{{ -}-cg}\xspace}
+\newcommand{\trj}{\texttt{{ -}-trj}\xspace}
+
 
 \newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
 
