--- a/theory/dft.tex
+++ b/theory/dft.tex
@@ -1,2 +1,4 @@
 \subsection{Density-functional methods}
 \label{sec:dft}
+
+While the use of the semiempirical ZINDO method provides an efficient on-the-fly technique to determine electronic coupling elements, it is not generally applicable to all systems. For instance, its predictive capacity with regards to atomic composition and localization behavior of orbitals within more complex structures is reduced. Moreover, transition- or semi-metals are often not even parametrized. In this case, {\it ab-initio} based approaches, e.g., density-functional theory can remedy the situation~\cite{huang_intermolecular_2004,huang_validation_2005,valeev_effect_2006,yin_balanced_2006,yang_theoretical_2007,baumeier_density-functional_2010}. Within the dimer projection method described in detail in Ref.~\cite{baumeier_density-functional_2010}, explicit quantum-chemical calculations are required for every molecule and every hopping pair in the morphology. As a consequence, this procedure is significantly more computationally demanding. The code currently contains scripts which support evaluation of transfer integrals from quantum-chemical calculations performed with the \gaussian and \turbomole packages.
