--- a/theory/neighborlist.tex
+++ b/theory/neighborlist.tex
@@ -8,4 +8,4 @@ mass distance, which is useful for molecules with anisotropic shapes.
 
 The neighbor list can be generated from the atomistic trajectory by using the \calc{neighborlist} \calculator. This calculator requires a cutoff, which can be specified in the \xmloptions file. The list is saved to the \sqlstate file:
 
-\small \verb* ctp_run \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{neighborlist}
+\small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{neighborlist}
