--- a/theory/theory.tex
+++ b/theory/theory.tex
@@ -5,12 +5,9 @@
 \input{theory/morphology}
 \input{theory/fragments}
 \input{theory/neighborlist}
-
-\section{Electronic coupling elements}
-\label{sec:transfer_integrals}
-\input{theory/moo}
-\input{theory/dft}
-
+\input{theory/reorganization_energy}
 \input{theory/energetic_disorder}
+\input{theory/electronic_couplings}
+\input{theory/rate}
 \input{theory/kmc}
 
