--- a/manual.tex
+++ b/manual.tex
@@ -3,7 +3,6 @@
 \usepackage[usenames]{color}
 \usepackage{bm}
 \usepackage{amsmath}
-\usepackage{appendix}
 \usepackage{xspace}
 \usepackage{a4wide}
 \usepackage{wrapfig}
@@ -18,6 +17,8 @@
 \usepackage{listings}
 \usepackage{array}
 \usepackage[table]{xcolor}
+\usepackage{units}
+\usepackage[toc,page]{appendix}
 
 \definecolor{webgreen}{rgb}{0,.5,0}
 \definecolor{webbrown}{rgb}{.6,0,0}
@@ -82,6 +83,9 @@ pdfpagemode=UseNone]{hyperref}
 \include{programs/programs}
 \include{programs/interfaces}
 \include{reference/reference}
+
+\appendix
+\include{theory/derivation_jortner}
 
 \bibliographystyle{achemso}
 \bibliography{literature_short}
