in the process of removing programs and interfaces

--- a/manual.tex
+++ b/manual.tex
@@ -78,10 +78,10 @@ pdfpagemode=UseNone]{hyperref}
 \include{theory/theory}
 \include{input/input}
 
-\chapter{Programs and interfaces}
+\chapter{Calculators}
 \label{sec:prog_interf}
-\include{programs/programs}
-\include{programs/interfaces}
+\input{programs/calculators}
+
 \include{reference/reference}
 
 \appendix
