--- a/theory/dft.tex
+++ b/theory/dft.tex
@@ -1,4 +1,112 @@
-\subsection{Density-functional methods}
+\subsection{Density-functional methods: interfaces to \gaussian and \turbomole}
 \label{sec:dft}
 
 While the use of the semiempirical ZINDO method provides an efficient on-the-fly technique to determine electronic coupling elements, it is not generally applicable to all systems. For instance, its predictive capacity with regards to atomic composition and localization behavior of orbitals within more complex structures is reduced. Moreover, transition- or semi-metals are often not even parametrized. In this case, {\it ab-initio} based approaches, e.g., density-functional theory can remedy the situation~\cite{huang_intermolecular_2004,huang_validation_2005,valeev_effect_2006,yin_balanced_2006,yang_theoretical_2007,baumeier_density-functional_2010}. Within the dimer projection method described in detail in Ref.~\cite{baumeier_density-functional_2010}, explicit quantum-chemical calculations are required for every molecule and every hopping pair in the morphology. As a consequence, this procedure is significantly more computationally demanding. The code currently contains scripts which support evaluation of transfer integrals from quantum-chemical calculations performed with the \gaussian and \turbomole packages.
+
+Apart from semi-empirical methods, we also provide interfaces for a DFT-based evaluation of electronic coupling elements. The interfacing procedure consists of three main steps: generation of directory structures containing input coordinates for monomers and dimers, performing the actual quantum-chemical calculations and calculating the transfer integrals using the DIPRO method, and finally reading the output into VOTCA\_CT.
+
+\subsubsection{Generation of directory structure and input coordinates}
+First, hopping sites and a neighbor list need to be generated from the atomistic topology and trajectory. Rigid fragments are resubstituted into the molecular geometries and the neighbor list is defined based on a cutoff distance between such fragments. This can be achieved by running, e.g.  
+\begin{verbatim}
+ctp_map [required options] --db state.db --nframes 1 --first-frame 1
+\end{verbatim}
+to generate a state file is for first frame of the trajectory. Then a neighbor list can be determined from the cutoff defined in {\tt main.xml} (see \ref{list:neighborcut_xml}).
+\lstinputlisting[
+  language=XML,
+  label=list:neighborcut_xml,
+  stringstyle=\ttfamily\footnotesize,
+  showstringspaces=false,
+  caption={\small Definition of neighborlist cutoff in {\tt main.xml}}.] {./programs/neighborcut.xml}
+by calling
+\begin{verbatim}
+ctp_run --opt main.xml --s segments.xml --db state.db --exec neighborlist
+\end{verbatim}
+and from that the full file and directory structure needed by {\tt ctp\_dipro} is written by 
+\begin{verbatim}
+ctp_run --opt main.xml --s segments.xml --db state.db --exec pairdump
+\end{verbatim}
+This requires the specification of the content of listing \ref{list:pairdump_xml} in {\tt main.xml}.
+\lstinputlisting[
+  language=XML,
+  label=list:pairdump_xml,
+  stringstyle=\ttfamily\footnotesize,
+  showstringspaces=false,
+  caption={\small Block of pairdump options required in {\tt main.xml} for generating the directory structure and coordinate files for {\tt ctp\_dipro}.}] {./programs/pairdump.xml}
+After this, the following directories and files have been created:
+\begin{verbatim}
+|----frame1/
+| |----mol_1/
+| | |----mol_1.xyz
+| | [...]
+| |----pair_1_2/
+| | |----dim/
+| | | |----pair_1_2.xyz
+| | [...]
+\end{verbatim}
+
+\subsubsection{Calculating the transfer integrals}
+Before starting the quantum-chemical calculations with either {\tt Gaussian} or {\tt Turbomole}, make sure that the respective environments for these programs are set. 
+
+First, for each molecule a converged electronic structure calculatiom has to be performed by running 
+\begin{verbatim}
+ctp_dipro --monomer QCP [METHOD]
+
+QCP:   G for Gaussian09
+       T for Turbomole
+
+METHOD: func/basis (optional)
+        overrides default functional/basisset combination
+        defaults: pbepbe/6-311G** Gaussian09
+                  pbe/def-TZVP    Turbomole
+\end{verbatim}
+in each {\tt mol\_*} directory. If no method is specified, {\tt ctp\_dipro} defaults to running a DFT calculation with the PBE functional and a 6-311G** basis set in {\tt Gaussian} and def-TZVP in {\tt Turbomole}. Note that {\tt OpenBabel} needs to be installed is {\tt Turbomole} is used. It is recommended to perform these calculations in batch mode on some kind of cluster system. Since it can eventually happen that files are not written back correctly, one should check if all files that are needed for the pair runs are present by executing in the {\tt frame*} directory
+\begin{verbatim}
+ctp_dipro --check N M QCP
+
+N:   First monomer to test
+M:   Last monomer to test
+QCP: G/T 
+\end{verbatim}
+A list of incomplete monomer calculations is written to file {\tt TROUBLE.mol}. If this is empty, one can proceed with running the pair calculations. For any directory {\tt pair\_A\_B}, the completed monomer calculations from the previous step have to be present in subdirectories {\tt mol\_A} and {\tt mol\_B}, e.g.
+\begin{verbatim}
+| | [...]
+| |----pair_1_2/
+| | |----molA/
+| | |----molB/
+| | |----dim/
+| | | |----pair_1_2.xyz
+| | [...]
+\end{verbatim}
+These subdirectories can be either copies or symbolic links, however, the most practical realization depends on the specifics of execute machine (e.g. local or network, hard disc etc.) so that these are not created automatically! Once these are created by the user, the transfer integral for the pair can be calculated by running {\tt ctp\_dipro --dimer} in the {\tt pair\_A\_B/dim} directory:
+ \begin{verbatim}
+ctp_dipro --dimer QCP [METHOD]
+
+QCP:   G for Gaussian09
+       T for Turbomole
+
+METHOD: func/basis (optional)
+        overrides default functional/basisset combination
+        defaults: pbepbe/6-311G** Gaussian09
+                  pbe/def-TZVP    Turbomole
+\end{verbatim}
+This command automatically generates a dimer input guess from the converged monomer orbitals, detects (pseudo-)degeneracies of HOMO or LUMO and calculates the required transfer integrals. As a result of the run, a file {\tt pair\_A\_B/TI.xml} as shown in listing \ref{list:TI_xml} is created (needs proper example).
+\lstinputlisting[
+  language=XML,
+  label=list:TI_xml,
+  stringstyle=\ttfamily\footnotesize,
+  showstringspaces=false,
+  caption={\small Example {\tt TI.xml} file created as the output of a DIPRO calculation. Due to slightly different implementations, the orbitals indices refer to monomer indices in a {\tt Gaussian} run but to indices in the merged dimer guess in a {\tt Turbomole} run.}] {./programs/TI.xml}
+
+\subsubsection{Writing transfer integrals to state file}
+After performing all transfer integral calculations, the resulting output files {\tt pair\_A\_B/TI.xml} have to be collected in the folder {\tt transfer\_integrals} as {\tt transfer\_integrals/pair\_A\_B.xml}. Then the transfer integrals are written into the state file using:
+\begin{verbatim}
+ctp_dipro --write TYPE ID FILE
+
+TYPE:   e    - electrons
+        h    - holes
+        edeg - (pseudo-)degenerate electrons (Boltzmann-weighted)
+        hdeg - (pseudo-)degenerate holes (Boltzmann-weighted)
+ID:     Number of frame
+FILE:   Name of state file 
+\end{verbatim}
+During the run, some sanity checks are performed, i.e., whether all transfer integrals are calculated, and whether a pair that is written exists in the state file. If there is an error, the tool aborts.
