--- a/theory/moo.tex
+++ b/theory/moo.tex
@@ -9,3 +9,32 @@ polymers~\cite{ruehle_multiscale_2010}, or partially disordered organic crystals
 
 The main advantage of the molecular orbital overlap \moo library is {\em fast} evaluation of electronic coupling elements. A detailed description of the method is provided in ref.~\cite{kirkpatrick_approximate_2008}. Please site this paper if you are using the method. Note that \moo is based on the semi-empirical ZINDO Hamiltonian and therefore has limited applicability. The general advice is to first compare the accuracy of the \moo method to the DFT-based calculations. 
 
+\moo can be used both in a sandalone mode and as a \calculator of the \votcactp. \moo constructs the Fock operator of a dimer from the  molecular orbitals of monomers by translating and rotating the orbitals and therefore requires the optimized geometry of the molecule and the projection coefficients of the molecular on atomic orbitals. 
+
+
+\subsubsection{Standalone mode}
+For a standalone mode program \overlap is provided 
+\begin{verbatim}
+ moo_overlap --conjseg benzene.xml --pos1 benzene1.pos --pos2 benzene2.pos
+\end{verbatim}
+Its input requires a description of two conjugated segments (\texttt{benzene.xml}, positions and orientations of the molecules and the files with molecular coordinates and orbitals. The structure of the files is shown in listings \ref{list:benzene_xml} and  \ref{list:benzene_pos}.
+\vskip 0.1cm
+\lstinputlisting[
+  language=XML,
+  label=list:benzene_xml,
+  stringstyle=\ttfamily\footnotesize,
+  showstringspaces=false,
+  caption={\small \texttt{benzene.xml} file with the description of the benzene molecule, which is also a single conjugated segment and a rigid fragment.}] {./programs/benzene.xml}
+
+\vskip 0.1cm
+
+\lstinputlisting[
+  language=XML,
+  label=list:benzene_pos, 
+  stringstyle=\ttfamily\footnotesize,
+  showstringspaces=false,
+  caption={\small \texttt{benzene1.pos} file which describes the position and orientation of the molecule. The name of the molecule is followed by three coordinates (relative to the center of mass of the supplied \texttt{xyz} file and then by nine elements of the rotation matrix $a_{ij} = e_i e^\text{mol}_j $. The reference coordinate frame is determined from the provided \texttt{xyz} file.}] {./fig/moo/moo_overlap/benzene1.pos}
+
+
+\subsubsection{Calculator of \votcactp}
+Semi-empirical method of evaluation of electronic couplings in a morphology is provided by the \integrals \calculator. In addition to definitions of conjugated segments, atomistic trajectory, and state file, the program needs coordinates and orbitals of conjugated segments. Coordinates are stored in \xyz files with four columns, first being the atom type and the next three atom coordinates. This is a standard \texttt{xyz} format without a header. Note that the atom order in \xyz files can be different from that of the mapping files. The correspondence between the two is established in the file which defines conjugated segments.
