--- a/appendix/calculators.tex
+++ b/appendix/calculators.tex
@@ -1,4 +1,4 @@
-\subsection{Calculators}
+\chapter{Calculators}
 \label{sec:calculators}
 
 Calculator is a piece of code which computes specific system properties, such as site energies, transfer integrals, etc. \ctprun is a wrapper program which executes all calculators. The generic syntax is 
@@ -10,4 +10,4 @@ File \texttt{options.xml} lists all options needed to run a specific calculator.
 %
 \lstinputlisting[label=list:calc, 
  caption={\small A part of the \texttt{options.xml} file with options for the \texttt{calculator\_name\{1,2\}} \refcalc.
-}]{./programs/calculators.xml}
+}]{./appendix/calculators.xml}
