--- a/newcommands.tex
+++ b/newcommands.tex
@@ -2,6 +2,9 @@
 \newcommand{\Equ}[1]{Eq.~\eqref{equ:#1}}
 \newcommand{\fig}[1]{figure~\ref{fig:#1}}
 \newcommand{\Fig}[1]{Figure~\ref{fig:#1}}
+\newcommand{\sect}[1]{section~\ref{sec:#1}}
+
+\newcommand{\slink}[2]{\hyperref[sec:#1]{#2}}
 
 \newcommand{\xml}{XML\xspace}
 \newcommand{\gromacs}{GROMACS\xspace}
