--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -1,4 +1,5 @@
 \section{Charge transfer rate}
+\label{sec:rates}
 
 Charge transfer rates can be postulated based on intuitive physical considerations, as it is done in the Gaussian disorder models~\cite{walker_electrical_2002,baessler_charge_1993,borsenberger_charge_1991,pasveer_unified_2005}. Alternatively, charge transfer theories can be used to evaluate rates from quantum chemical calculations~\cite{bredas_molecular_2009,coropceanu_charge_2007,bredas_charge-transfer_2004,nelson_modeling_2009,baumeier_density-functional_2010,kirkpatrick_approximate_2008}. In spite of being significantly more computationally demanding, the latter approach allows to link the chemical and electronic structure, as well as the morphology, to charge dynamics.
 
