--- a/manual.tex
+++ b/manual.tex
@@ -19,6 +19,9 @@
 \usepackage[table]{xcolor}
 \usepackage{units}
 \usepackage[toc,page]{appendix}
+\usepackage{lineno}
+\usepackage{makeidx}
+\usepackage{showidx}
 
 \definecolor{webgreen}{rgb}{0,.5,0}
 \definecolor{webbrown}{rgb}{.6,0,0}
@@ -49,8 +52,15 @@ pdfpagemode=UseNone]{hyperref}
     \addcontentsline{toc}{chapter}{Bibliography}
 }
 
+\makeindex
+
 \begin{document}
 
+\addtolength{\oddsidemargin}{-2cm}
+\addtolength{\evensidemargin}{-2cm}
+\addtolength{\textwidth}{0cm}
+\addtolength{\topmargin}{0cm}
+\addtolength{\textheight}{0cm}
 
 \lstset{
   language=XML,
@@ -74,6 +84,10 @@ pdfpagemode=UseNone]{hyperref}
 \tableofcontents
 %\cleardoublepage
 \mainmatter
+
+\linenumbers
+
+
 \include{theory/introduction}
 
 \chapter{Theoretical background}
@@ -88,6 +102,10 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/rate}
 \input{theory/kmc}
 
+%\input{theory/nondispersive}
+\input{theory/analysis}
+\input{theory/correlations}
+
 \include{input/input}
 
 \include{reference/reference}
@@ -96,7 +114,11 @@ pdfpagemode=UseNone]{hyperref}
 \input{appendix/derivation_jortner}
 \input{appendix/calculators}
 
+%\printindex
+
+
 \bibliographystyle{achemso}
 \bibliography{literature_short}
+
 
 \end{document} 
