manual lambdas and delta Es

--- a/manual.bib
+++ b/manual.bib
@@ -1,4 +1,32 @@
 
+@article{daggett_molecular_1991,
+	title = {Molecular dynamics simulations of small peptides: Dependence on dielectric model and {pH}},
+	volume = {31},
+	issn = {0006-3525},
+	shorttitle = {Molecular dynamics simulations of small peptides},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/bip.360310304/pdf},
+	doi = {10.1002/bip.360310304},
+	number = {3},
+	journal = {Biopolymers},
+	author = {Daggett, Valerie and Kollman, Peter A. and Kuntz, Irwin D.},
+	month = feb,
+	year = {1991},
+	pages = {285--304}
+},
+
+@article{marcon_columnar_2008,
+	title = {Columnar mesophases of hexabenzocoronene derivatives. I. Phase transitions},
+	volume = {129},
+	issn = {00219606},
+	url = {http://link.aip.org/link/JCPSA6/v129/i9/p094505/s1&Agg=doi},
+	doi = {10.1063/1.2969763},
+	number = {9},
+	journal = {The Journal of Chemical Physics},
+	author = {Marcon, Valentina and Vehoff, Thorsten and Kirkpatrick, James and Jeong, Cheol and Yoon, Do Y. and Kremer, Kurt and Andrienko, Denis},
+	year = {2008},
+	pages = {094505}
+},
+
 @article{kirkpatrick_approximate_2008,
 	title = {An approximate method for calculating transfer integrals based on the {ZINDO} Hamiltonian},
 	volume = {108},
@@ -12,19 +40,17 @@
 	pages = {51--56}
 },
 
-@article{mcmahon_ad_2009,
-	title = {An ad hoc tight binding method to study the electronic structure of semiconducting polymers},
-	volume = {480},
-	issn = {0009-2614},
-	url = {http://www.sciencedirect.com/science/article/B6TFN-4X7R83W-1/2/81b66bde8a1bb45e2034af201f1416ec},
-	doi = {10.1016/j.cplett.2009.09.032},
-	abstract = {A linear-scaling method, based on the definition of a localized molecular orbital set, for the calculation of the electronic structure of a conjugated polymer, is presented and applied to substituted polythiophenes. The ability of this method to predict the localization of the electronic wave function due to structural disorder and to compute the density of states is evaluated. The method is particularly suitable for the analysis of the electronic structure of snapshots deriving from classical molecular dynamics simulations of polymers. We present one such analysis evaluating the effect of inter-chain coupling on the resulting density of states.},
-	number = {4-6},
-	journal = {Chemical Physics Letters},
-	author = {{McMahon}, David P. and Troisi, Alessandro},
-	month = oct,
-	year = {2009},
-	pages = {210--214}
+@article{__????
+},
+
+@book{may_charge_2011,
+	edition = {3. \"{u}berarb. u. erw. Auflage},
+	title = {Charge and Energy Transfer Dynamics in Molecular Systems},
+	isbn = {3527407324},
+	publisher = {{Wiley-VCH} Verlag {GmbH} \& Co. {KGaA}},
+	author = {May, Volkhard and K\"{u}hn, Oliver},
+	month = feb,
+	year = {2011}
 },
 
 @book{gamma_design_1995,
@@ -35,6 +61,21 @@
 	author = {Gamma, Erich and Helm, Richard and Johnson, Ralph E.},
 	month = mar,
 	year = {1995}
+},
+
+@article{bortz_new_1975,
+	title = {A new algorithm for Monte Carlo simulation of Ising spin systems},
+	volume = {17},
+	issn = {0021-9991},
+	url = {http://www.sciencedirect.com/science/article/B6WHY-4DDR37H-9W/2/c5e217e509b6a99a10c20c683754ce68},
+	doi = {10.1016/0021-9991(75)90060-1},
+	abstract = {We describe a new algorithm for Monte Carlo simulation of Ising spin systems and present results of a study comparing the speed of the new technique to that of a standard technique applied to a square lattice of 6400 spins evolving via single spin flips. We find that at temperatures T {\textless} Tc, the critical temperature, the new technique is faster than the standard technique, being ten times faster at T = 0.588 Tc. We expect that the new technique will be especially valuable in Monte Carlo simulation of the time evolution of binary alloy systems. The new algorithm is essentially a reorganization of the standard algorithm. It accounts for the a priori probability of changing spins before, rather than after, choosing the spin or spins to change.},
+	number = {1},
+	journal = {Journal of Computational Physics},
+	author = {Bortz, A. B. and Kalos, M. H. and Lebowitz, J. L.},
+	month = jan,
+	year = {1975},
+	pages = {10--18}
 },
 
 @article{kirkpatrick_columnar_2008,
@@ -65,25 +106,19 @@
 	pages = {034709}
 },
 
-@article{ruehle_microscopic_2011,
-	title = {Microscopic simulations of charge transport in disordered organic semiconductors},
-	doi = {10.1021/ct200388s},
-	journal = {Journal of Chemical Theory and Computation},
-	author = {R\"{u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bjo?rn and Andrienko, Denis},
-	year = {2011}
-},
-
-@article{vukmirovi_charge_2008,
-	title = {Charge patching method for electronic structure of organic systems},
-	volume = {128},
-	issn = {00219606},
-	url = {http://link.aip.org/link/JCPSA6/v128/i12/p121102/s1&Agg=doi},
-	doi = {10.1063/1.2901965},
-	number = {12},
-	journal = {The Journal of Chemical Physics},
-	author = {Vukmirovi\'{c}, Nenad and Wang, {Lin-Wang}},
-	year = {2008},
-	pages = {121102}
+@article{bredas_charge-transfer_2004,
+	title = {{Charge-Transfer} and {Energy-Transfer} Processes in {?-Conjugated} Oligomers and Polymers: A Molecular Picture},
+	volume = {104},
+	shorttitle = {{Charge-Transfer} and {Energy-Transfer} Processes in {?-Conjugated} Oligomers and Polymers},
+	url = {http://dx.doi.org/10.1021/cr040084k},
+	doi = {10.1021/cr040084k},
+	number = {11},
+	journal = {Chemical Reviews},
+	author = {Br\'{e}das, {Jean-Luc} and Beljonne, David and Coropceanu, Veaceslav and Cornil, Jerome},
+	month = nov,
+	year = {2004},
+	pages = {4971--5004},
+	annote = {{PMID:} 15535639}
 },
 
 @article{vukmirovi_charge_2009,
@@ -101,19 +136,18 @@
 	pages = {3996--4000}
 },
 
-@article{bortz_new_1975,
-	title = {A new algorithm for Monte Carlo simulation of Ising spin systems},
-	volume = {17},
-	issn = {0021-9991},
-	url = {http://www.sciencedirect.com/science/article/B6WHY-4DDR37H-9W/2/c5e217e509b6a99a10c20c683754ce68},
-	doi = {10.1016/0021-9991(75)90060-1},
-	abstract = {We describe a new algorithm for Monte Carlo simulation of Ising spin systems and present results of a study comparing the speed of the new technique to that of a standard technique applied to a square lattice of 6400 spins evolving via single spin flips. We find that at temperatures T {\textless} Tc, the critical temperature, the new technique is faster than the standard technique, being ten times faster at T = 0.588 Tc. We expect that the new technique will be especially valuable in Monte Carlo simulation of the time evolution of binary alloy systems. The new algorithm is essentially a reorganization of the standard algorithm. It accounts for the a priori probability of changing spins before, rather than after, choosing the spin or spins to change.},
-	number = {1},
-	journal = {Journal of Computational Physics},
-	author = {Bortz, A. B. and Kalos, M. H. and Lebowitz, J. L.},
-	month = jan,
-	year = {1975},
-	pages = {10--18}
+@article{ruehle_versatile_2009,
+	title = {Versatile {Object-Oriented} Toolkit for {Coarse-Graining} Applications},
+	volume = {5},
+	url = {http://dx.doi.org/10.1021/ct900369w},
+	doi = {10.1021/ct900369w},
+	abstract = {Coarse-graining is a systematic way of reducing the number of degrees of freedom representing a system of interest. Several coarse-graining techniques have so far been developed, such as iterative Boltzmann inversion, force-matching, and inverse Monte Carlo. However, there is no unified framework that implements these methods and that allows their direct comparison. We present a versatile object-oriented toolkit for coarse-graining applications {(VOTCA)} that implements these techniques and that provides a flexible modular platform for the further development of coarse-graining techniques. All methods are illustrated and compared by coarse-graining the {SPC/E} water model, liquid methanol, liquid propane, and a single molecule of hexane.},
+	number = {12},
+	journal = {Journal of Chemical Theory and Computation},
+	author = {R\"{u}hle, Victor and Junghans, Christoph and Lukyanov, Alexander and Kremer, Kurt and Andrienko, Denis},
+	month = dec,
+	year = {2009},
+	pages = {3211--3223}
 },
 
 @article{ruehle_multiscale_2010,
@@ -129,44 +163,25 @@
 	pages = {134103}
 },
 
-@article{ruehle_versatile_2009,
-	title = {Versatile {Object-Oriented} Toolkit for {Coarse-Graining} Applications},
-	volume = {5},
-	url = {http://dx.doi.org/10.1021/ct900369w},
-	doi = {10.1021/ct900369w},
-	abstract = {Coarse-graining is a systematic way of reducing the number of degrees of freedom representing a system of interest. Several coarse-graining techniques have so far been developed, such as iterative Boltzmann inversion, force-matching, and inverse Monte Carlo. However, there is no unified framework that implements these methods and that allows their direct comparison. We present a versatile object-oriented toolkit for coarse-graining applications {(VOTCA)} that implements these techniques and that provides a flexible modular platform for the further development of coarse-graining techniques. All methods are illustrated and compared by coarse-graining the {SPC/E} water model, liquid methanol, liquid propane, and a single molecule of hexane.},
-	number = {12},
-	journal = {Journal of Chemical Theory and Computation},
-	author = {R\"{u}hle, Victor and Junghans, Christoph and Lukyanov, Alexander and Kremer, Kurt and Andrienko, Denis},
-	month = dec,
+@article{mcmahon_ad_2009,
+	title = {An ad hoc tight binding method to study the electronic structure of semiconducting polymers},
+	volume = {480},
+	issn = {0009-2614},
+	url = {http://www.sciencedirect.com/science/article/B6TFN-4X7R83W-1/2/81b66bde8a1bb45e2034af201f1416ec},
+	doi = {10.1016/j.cplett.2009.09.032},
+	abstract = {A linear-scaling method, based on the definition of a localized molecular orbital set, for the calculation of the electronic structure of a conjugated polymer, is presented and applied to substituted polythiophenes. The ability of this method to predict the localization of the electronic wave function due to structural disorder and to compute the density of states is evaluated. The method is particularly suitable for the analysis of the electronic structure of snapshots deriving from classical molecular dynamics simulations of polymers. We present one such analysis evaluating the effect of inter-chain coupling on the resulting density of states.},
+	number = {4-6},
+	journal = {Chemical Physics Letters},
+	author = {{McMahon}, David P. and Troisi, Alessandro},
+	month = oct,
 	year = {2009},
-	pages = {3211--3223}
+	pages = {210--214}
 },
 
-@article{marcon_columnar_2008,
-	title = {Columnar mesophases of hexabenzocoronene derivatives. I. Phase transitions},
-	volume = {129},
-	issn = {00219606},
-	url = {http://link.aip.org/link/JCPSA6/v129/i9/p094505/s1&Agg=doi},
-	doi = {10.1063/1.2969763},
-	number = {9},
-	journal = {The Journal of Chemical Physics},
-	author = {Marcon, Valentina and Vehoff, Thorsten and Kirkpatrick, James and Jeong, Cheol and Yoon, Do Y. and Kremer, Kurt and Andrienko, Denis},
-	year = {2008},
-	pages = {094505}
-},
-
-@article{daggett_molecular_1991,
-	title = {Molecular dynamics simulations of small peptides: Dependence on dielectric model and {pH}},
-	volume = {31},
-	issn = {0006-3525},
-	shorttitle = {Molecular dynamics simulations of small peptides},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/bip.360310304/pdf},
-	doi = {10.1002/bip.360310304},
-	number = {3},
-	journal = {Biopolymers},
-	author = {Daggett, Valerie and Kollman, Peter A. and Kuntz, Irwin D.},
-	month = feb,
-	year = {1991},
-	pages = {285--304}
+@article{ruehle_microscopic_2011,
+	title = {Microscopic simulations of charge transport in disordered organic semiconductors},
+	doi = {10.1021/ct200388s},
+	journal = {Journal of Chemical Theory and Computation},
+	author = {R\"{u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bjo?rn and Andrienko, Denis},
+	year = {2011}
 }
