--- a/theory/electronic_couplings.tex
+++ b/theory/electronic_couplings.tex
@@ -1,7 +1,7 @@
 \section{Electronic coupling elements}
 \label{sec:transfer_integrals}
 
-The electronic transfer integral $J_{ij}$ entering the Marcus rates in \equ{marcus} is defined as
+The electronic transfer integral\index{electronic coupling} element $J_{ij}$ entering the Marcus rates in \equ{marcus} is defined as
 \begin{equation}
    J_{ij} = \left\langle \phi^i \left\vert \hat{H} \right\vert \phi^j \right\rangle ,
 \label{equ:TI}
