--- a/theory/neighborlist.tex
+++ b/theory/neighborlist.tex
@@ -1,10 +1,8 @@
 \section{Neighbor list}
-A list of neigboring molecules (neighbor list) containes all pairs of molecules for which rates (coupling elements, reorganization energies, and site energy differences are evaluated).
+A list of neigboring molecules, or neighbor list\index{neighbor list}, containes all pairs of molecules for which \slink{transfer_integrals}{coupling elements}, \slink{reorganization}{reorganization energies}, \slink{site_energies}{site energy differences}, and \slink{rates}{rates} are evaluated.
 
-Two segments are added to this list if the distance between centers of mass of any of their rigid fragments is below
-a certain cutoff. This allows neighbors to be selected on a criterion of minimum distance of approach rather than center of
-mass distance, which is useful for molecules with anisotropic shapes.
+Two segments are added to this list if the distance between centers of mass of any of their rigid fragments is below a certain cutoff. This allows neighbors to be selected on a criterion of minimum distance of approach rather than center of mass distance, which is useful for molecules with anisotropic shapes.
 
 The neighbor list can be generated from the atomistic trajectory by using the \calc{neighborlist} \calculator. This calculator requires a cutoff, which can be specified in the \xmloptions file. The list is saved to the \sqlstate file:
 
-\small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{neighborlist}
+{\small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{neighborlist}}
